# gnomeoutliner

CVSROOT/: loginfo  notify  syncmail
outliner/: .cvsignore  AUTHORS  COPYRIGHT  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
outliner/po/: .cvsignore  POTFILES.in
outliner/src/: .cvsignore  Makefile.am  outliner-actions.c  outliner-actions.h  outliner-cell-renderer.c  outliner-cell-renderer.h  outliner-document.c  outliner-document.h  outliner-file.c  outliner-file.h  outliner-fprops-dialog.c  outliner-fprops-dialog.h  outliner-main.c  outliner-opml.c  outliner-opml.h  outliner-text-view.c  outliner-text-view.h  outliner-view.c  outliner-view.h  outliner-window.c  outliner-window.h  xml-gnomevfs.c  xml-gnomevfs.h
