AC_PREREQ(2.53)
AC_INIT(gnome-outliner, 0.2cvs)
AC_CONFIG_SRCDIR(src/outliner-main.c)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_INSTALL
AC_STDC_HEADERS
AC_DISABLE_STATIC
AC_PROG_INTLTOOL
AC_PROG_LIBTOOL
AC_PROG_LN_S

PKG_CHECK_MODULES(DEPS, glib-2.0 >= 2.4.0 gtk+-2.0 >= 2.4.0 libxml-2.0 >= 2.6.8 libgnome-2.0 >= 2.6.0 libgnomeui-2.0 >= 2.6.0)
AC_SUBST(DEPS_CFLAGS)
AC_SUBST(DEPS_LIBS)

ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

GETTEXT_PACKAGE=$PACKAGE_NAME
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["${GETTEXT_PACKAGE}"], [gettext domain])

AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)

AC_CONFIG_FILES([Makefile src/Makefile po/Makefile.in])
AC_OUTPUT
